--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# oh pycharm...
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -79,6 +82,7 @@ celerybeat-schedule
 .env
 
 # virtualenv
+.venv/
 venv/
 ENV/
 
